src/index.css
html {
  background-color:rgb(249, 253, 253);
  min-height: 100%;
}

body {
  background-color:rgb(249, 253, 253);
  min-height: 100%;
}

/* #root {
  height: 100%;
} */

*::selection {
  background-color: #0e3529;
  color: white;
}

/* --------------------- NavBar --------------------- */

nav {
  border-bottom: 1px rgb(4, 69, 70) solid;
  background-color:rgb(249, 253, 253);
}
.nav-item {
  font-family: Poppins 700;
  font-weight: bold;
  font-size: 1.3rem;
  color: rgb(4, 69, 70);
}

.nav-home {
  font-family: Poppins 700;
  font-weight: bold;
  font-size: 3rem;
  color: rgb(4, 69, 70);
}

.nav-item-area {
  transition: ease-out 0.3s;
  position: relative;
  z-index: 1;
}

.nav-item-area:before {
  transition: 0.5s all ease;
  position: absolute;
  top: -70%;
  left: 50%;
  right: 50%;
  bottom: -70%;
  opacity: 0;
  content: "";
  border-radius: 3%;
  background-color: rgb(4, 69, 70);
}
.nav-item-area:hover:before {
  transition: 0.5s all ease;
  left: 0;
  right: 0;
  opacity: 1;
  z-index: -1;
}

.nav-item:hover {
  color: white;
}

.ham-tab {
  z-index: 1;
  position:fixed;
  left:0;
  right:0;
  width: 100vw;
  background-color: #0e3529;
  font-size: 1.2em;
  transition: 1s ease;
}

.sm-nav-item {
  cursor: pointer;
}
.sm-nav-item:hover {
  background-color: #061813;
}

/* --------------------- footer --------------------- */
.footer {
  background-color: rgb(4, 69, 70);
  position: relative;
  bottom: 0;
}

.footer-text {
  font-size: 1.8em;
  color: white;
}

i:hover {
  color:rgb(43, 139, 103) !important;
}

/* --------------------- HomePage --------------------- */
.main-intro {
  width: 80%;
  /* background-image: url("./images/Nature-bg3.jpg"); */
  margin: 150px 0;
}

.main-title {
  font-size: 5.5rem;
  font-family: 'Black Han Sans', sans-serif;
  color: rgb(2, 38, 39);
}

.description-title {
  font-size: 3.5rem;
  font-family: 'News Cycle', sans-serif;
  color: rgb(2, 38, 39);
}

h2.projects-title-hp {
  background-color: rgb(51, 51, 51, 0.95);
}

h2.experience-title-hp, h2.about-me-title-hp {
  text-align: center;
}

h2.projects-title-hp:hover, .experience-hp:hover, .about-me-hp:hover {
  color: rgb(67, 189, 128);
}

.experience-hp {
  height: 40vh;
  background-color: rgb(3, 42, 43);
  border-radius: 25px;
  margin-top: 5vh;
}
.exp-conatiner-hp {
  width: 90vw;
}

.about-me-hp {
  height: 40vh;
}

/*~~~ HP Videos ~~~*/

.projects-hp {
  height: 40vh;
  color: white;
  background-color:rgb(39, 39, 39);
}

.hp-video { 
  border: 3px rgb(39, 39, 39) solid;
  display: flex;
  align-items: center;
  justify-content: center;
  height: 25rem;
  box-shadow: 0 0 20px #7796af;
  z-index: 1;
}

.video-reflect {
  opacity: 70%;
  z-index: 0;
  height: 25rem;
  object-fit: cover;
  filter: blur(3px);
  -webkit-filter: blur(3px);
}

.move-right {
  margin-right: 22rem;
  -webkit-transform: scaleX(-1);
  transform: scaleX(-1);
  overflow: hidden;
  white-space: hidden;
}

.move-left {
  margin-left: 22rem;
  overflow: hidden;
  white-space: hidden;
}

.text-box {
  border: solid rgb(31, 31, 31) 1px;
}

.pos-forward {
  z-index: 2;
  transform: translate(0%, 120%);
}

/* --------------------- Experience --------------------- */

.work-ex-page {
  height: 100vh;
}

.show-tab {
  display: flex;
}

.hide-tab {
  display: none;
}

.btn-toggle:hover {
  color: rgb(99, 241, 163);
}

.btn-dwnld {
  background-color: #0e3529;
  color: white;
}

.btn-dwnld:hover {
  background-color:rgb(43, 139, 103);
  box-shadow: 0 12px 16px 0px rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
}

.tab-box {
  flex-direction: column;
  margin-right: 10vw;
  margin-left: 5vw;
  height: 40vh;
}

.exp-container {
  flex-direction: row;
  margin: 8vh 0;
}

.exp-box {
  max-width: 70vw !important;
}

.exp-content {
  max-width: 100%;
}

.img-style {
  max-width: 150px;
}

/* .resume-div {
  height: 50%;
} */

.textLayer {
  display: none;
}

.annotationLayer {
  width: 0px !important;
  height: 0px !important;
}

/* --------------------- AboutMe --------------------- */

.aboutme-page {
  height: 100vh;
}

.aboutme-section {
  color: rgb(3, 42, 43);
  padding: 10%;
}

/* --------------------- Projects --------------------- */

.temp-mock-vid {
  height: 400px;
  width: 210px;
  background-color: #7796af;
}

.card-container {
  max-width: 80vw;
}

.project-page {
  height: 100%;
  width: 90%;
}

.project-border {
  border: 2px rgb(4, 69, 70) solid;
  width: 100%;
}

.title {
  height: 0px;
}

.cards {
  width: 330px;
  border: 0px;
}

.card img {
  width: 300px;
  height: 20vh;
}

.container {
  position: relative;
  width: 50%;
}

.container:hover .overlay {
  opacity: 0.9;
}

/* .rows-container {
  border-bottom: gray solid 1px;
} */

.fadeInTop {
  -webkit-animation: fadeInTop 2s both;
  -moz-animation: fadeInTop 20s both;
  -o-animation: fadeInTop 20s both;
  animation: fadeInTop 2s both;
}

.overlay {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  height: 100%;
  width: 100%;
  opacity: 0;
  transition: .5s ease;
  background-color: #0e3529;
}

.text {
  color: white;
  font-size: 20px;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  text-align: center;
}

@-webkit-keyframes fadeInTop {
  0%{
    opacity: 0;
    -webkit-transform: translateY(-50px);
  }
  100%{
    opacity: 1;
    -webkit-transform: translateY(0);
  }
}
@-moz-keyframes fadeInTop {
  0%{
    opacity: 0;
    -moz-transform: translateY(-50px);
  }
  100%{
    opacity: 1;
    -moz-transform: translateY(0);
  }
}
@-o-keyframes fadeInTop {
  0%{
    opacity: 0;
    -o-transform: translateY(-50px);
  }
  100%{
    opacity: 1;
    -o-transform: translateY(0);
  }
}
@keyframes fadeInTop {
  0%{
    opacity: 0;
    transform: translateY(-50px);
  }
  100%{
    opacity: 1;
    transform: translateY(0);
  }
}


@media (max-width: 1000px) {
  .rows-container {
    flex-direction: column !important;
    border: 0;
  }
}

@media (min-width: 900px) {
  .exp-abtme-container {
    display: flex;
    flex-direction: row;
  }
}

@media (max-width: 900px) {
  .exp-abtme-container {
    display: flex;
    flex-direction: column;
  }
  
  .video-reflect {
    height: 20rem;
  }

  .move-left {
    margin-left: 18rem;
  }

  .move-right {
    margin-right: 18rem;
  }

  .hp-video {
    height: 20rem;
  }

  .pos-forward {
    transform: translate(0%, 100%);
  }
}

@media (min-width: 700px){
  .sm-screen-nav {
    display: none;
  }
  
  .ham-tab {
    display: none !important;
  }

  .lg-screen-nav {
    display: flex;
  }
}

@media (max-width: 700px) {
  .sm-screen-nav {
    display: flex;
  }

  .lg-screen-nav {
    display: none;
  }
}

@media (max-width: 900px) {
  .card-container {
    width: 100%;
  }
  .cards {
    width: 100%;
  }

  .exp-container {
    flex-direction: column;
  }
  .tab-box {
    flex-direction: row;
    max-height: 15vh;
  }
  .btn-exp {
    max-height: 100px;
  }
}

@media (min-width: 756px) {
  .resume-note {
    display: none !important;
  }
}

@media (max-width: 755px) {
  .tab-box {
    flex-direction: column;
  }

  .resume-contain {
    overflow: auto;
    justify-content: flex-start !important;
  }
  .resume-img {
    width: 700px;    
  }

  .resume-note {
    display: flex !important;
  }

  
}

/* turn nav bar in hamburger menu
@media (max-width: 590px) {

} */

@media (max-width: 600px) {    
  .hp-video {
    height: 15rem;
  }

  .video-reflect {
    height: 15rem;
  }

  .pos-forward {
    transform: translate(0%, 70%);
  }

  .projects-hp {
    height: 20vh;
  }
}

@media screen and (max-width: 500px) {
  .footer-ab-me {
    background-color: rgb(4, 69, 70);
    position: relative;
    bottom: -900px;
  }
  .footer-projects {
    background-color: rgb(4, 69, 70);
    position: relative;
    bottom: -600px;
  }
  .footer-exp {
    background-color: rgb(4, 69, 70);
    position: relative;
    bottom: -100px;
  }
  .react-pdf__Page__canvas {
      width: 95vw !important;
      height: 65vh !important;
  }

  @media (max-width: 428px) {
    .pos-forward {
      transform: translate(0%, 50%);
    }
  }

}

